--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ futures = { version = "0.3.5" }
 log = "0.4.8"
 rand = "0.7.2"
 async-std = "1"
-yaanhyy-secio = { rev = '1a2aeff0358c9e6e6cb79730a75233aa4209a425', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
 pin-utils ="*"
+
+[dev-dependencies]
+yaanhyy-secio = {git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
